  **************
  * v2.1 Alpha 1
  **************

    * More dependencies (unregistered)
        Fixed untracked collation dependencies in PSQL
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-870
        Engine crashes while trying to backup a logically corrupt database
      Contributor(s):
        Claudio Valderrama <cvalde at usa.net>

    * Bugfix CORE-200
        Empty column names with aggregate functions
      Contributor(s):
        Claudio Valderrama <cvalde at usa.net>

    * Bugfix CORE-967
        SQL with incorrect characters (outside the ASCII range) may be processed wrongly
      Contributor(s):
        Claudio Valderrama <cvalde at usa.net>

    * Bugfix CORE-965
        Many aggregate functions within a single select list may cause a server crash
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-925
        ALL predicate works incorrectly for some subqueries
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-833
        Connection issues with very long hostname
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-850
        DYN layer allows to set defaults for computed fields when altering a field
      Contributor(s):
        Claudio Valderrama <cvalde at usa.net>

    * Bugfix CORE-104
        Dropping and recreating a table in the same transaction disables the primary key
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-88
        Join on different datatypes produces undesired results
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-202
        ORDER BY works wrong with collate PT_PT
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-866
        Removing a NOT NULL constraint is not visible until reconnect
      Contributor(s):